# FreeRouter

./: .env.example  .gitignore  README.md  backup-local-state.ps1  backup-local-state.sh  desktop-help.html  desktop-qa-ledger.html  dev-desktop.ps1  install-desktop.ps1  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  rebuild-desktop.ps1  restore-local-state.ps1  restore-local-state.sh  run-tray.bat  run-tray.ps1  run.bat  run.ps1  run.sh  validate.ps1  validate.sh
app/: __init__.py  anthropic_compat.py  app_services.py  benchmark_research.py  benchmark_store.py  capability_probe_schedule.py  capability_probes.py  capability_registry.py  capability_runtime.py  capability_tags.py  catalog_store.py  chat_page.py  client.py  codex_compat.py  desktop_api.py  desktop_app.py  desktop_bridge.py  desktop_icon.py  desktop_page.py  desktop_runtime.py  desktop_screen.py  desktop_settings.py  endpoint_diagnosis.py  factory.py  live_monitor.py  local_backup.py  main.py  model_catalog.py  model_discovery.py  model_ranking.py  openai_stream_routing.py  provider_errors.py  react_app.py  request_limiter.py  request_requirements.py  response_parse.py  router.py  routing_policy.py  runtime_paths.py  settings.py  (+8 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: architecture.html  capability-tags.md  code-quality-baseline.html  product-retention-matrix.html  streaming-behavior.html
scripts/: build-sidecar.ps1  check_app_state_access.py  check_import_boundaries.py  check_markdown.mjs  check_module_sizes.py  dev.ps1  extract_legacy_pages.py  stop-all-freerouter.ps1
tests/: test_anthropic_api.py  test_anthropic_compat.py  test_app_services.py  test_benchmark_refresh.py  test_build_sidecar.py  test_capability_probe_schedule.py  test_capability_probes.py  test_capability_tags.py  test_catalog_capabilities.py  test_characterization.py  test_chat_completions_edge_cases.py  test_client.py  (+24 more)
(+80 files in other folders)
