[package]
name = "freerouter_desktop"
version = "0.1.0"
description = "FreeRouter desktop shell"
authors = ["FreeRouter"]
edition = "2021"

[lib]
name = "freerouter_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
